<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_setup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alineyiee@shu.edu.cn">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 添加接口消息依赖 -->
  <depend>car_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
